examples/errors/redeclaration.olang
// Simplest program test
// Just sum of two integers

Program: Main()

class Main is
    this() is

        var a : Integer
        var b : Integer(10)
        a := Integer(10)
        var sum : a.Plus(b)
        c.print()
    end

     method getCounter() is
          var a: String
          return a.sum(5)
     end



end

class Second is
    this() is
        var b : Integer(10)

        var sum : a.Plus(b)
        sum.print()
    end
end